force-app/main/default/objects/Contractor_Match__c.object
<CustomObject>
    <description>A fuzzy match of an account from Connect that does not have an Avetta Id</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contractor Matches</relationshipLabel>
        <relationshipName>Contractor_Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>All_Matches__c</fullName>
        <description>All Matches made by the fuzzy logic.</description>
        <label>All Matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Organizer_Id__c</fullName>
        <label>Contact Organizer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contractor Matches</relationshipLabel>
        <relationshipName>Contractor_Matches</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DBAName__c</fullName>
        <label>DBAName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deadline__c</fullName>
        <label>Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Global_Parent__c</fullName>
        <label>Global Parent</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Type__c</fullName>
        <defaultValue>&apos;Update Account&apos;</defaultValue>
        <label>Match Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Update Account</fullName>
                </value>
                <value>
                    <fullName>Supplier Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrganizerId__c</fullName>
        <label>OrganizerId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SUID__c</fullName>
        <label>SUID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vetify__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To determine from Connect when someone is an active subscriber to Vetify. System of record is Connect to manage this input</description>
        <label>Vetify</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountName__c</fullName>
        <label>accountName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountRecordTypeId__c</fullName>
        <label>Account Record Type Id</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountRecordType__c</fullName>
        <label>accountRecordType</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountStatus__c</fullName>
        <label>accountStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountType__c</fullName>
        <label>accountType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>additionalBoolean1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>additionalBoolean1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>additionalDate1__c</fullName>
        <label>additionalDate1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>additionalText1__c</fullName>
        <label>additionalText1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>additionalText2__c</fullName>
        <label>additionalText2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>address_Line_2__c</fullName>
        <label>address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billableEntityId__c</fullName>
        <label>billableEntityId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <label>country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fax__c</fullName>
        <label>fax</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <label>firstName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>globalAccountId__c</fullName>
        <label>globalAccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastName__c</fullName>
        <label>lastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parentAccountId__c</fullName>
        <label>parentAccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>payingFacilities__c</fullName>
        <label>payingFacilities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phoneNumber__c</fullName>
        <label>phoneNumber</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postalCode__c</fullName>
        <label>postalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>preferredLang__c</fullName>
        <label>preferredLang</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>registrationDate__c</fullName>
        <label>registrationDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>requestSummary__c</fullName>
        <label>Request Summary</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>requestedBy__c</fullName>
        <description>Avetta ID</description>
        <label>requestedBy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>state</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>street__c</fullName>
        <label>street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>taxId__c</fullName>
        <label>taxId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>webUrl__c</fullName>
        <label>webUrl</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Contractor Match</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Contractor Match Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contractor Matches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>